--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/429aaf02bc.js" crossorigin="anonymous"></script>
 </head>
-<body class="font-mono">
+<body>
   <app-root></app-root>
 </body>
 </html>
